<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/baseGround"
        tools:context=".Views.activity.ForgetPassword">


        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/layout_shape"
            android:elevation="20dp"
            android:padding="4dp"
            app:layout_constraintCircleRadius="20dp"
            tools:targetApi="lollipop">


            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/close"
                style="@style/AppTheme.RoundedTextView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_close_24"
                android:visibility="visible" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/toolbarTitle"
                style="@style/textStyleHeadLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:fontFamily="@font/berkshire_swash"
                android:gravity="center"
                android:text="@string/forget_password" />

        </RelativeLayout>


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:id="@+id/checkPasswordDialogTitle"
            android:text="@string/enter_your_e_mail_and_we_will_send_you_a_message_with_your_current_password"
            style="@style/textStyle"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/toolbar"
            android:layout_marginLeft="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/AppTheme.RoundedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkPasswordDialogTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:hint="@string/e_mail"
            android:minWidth="300dp"
            android:textColorHint="@color/textColor"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/textColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/myEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                style="@style/textStyle"
                android:padding="4dp"
                android:saveEnabled="false"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/sendPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_margin="4dp"
            android:text="@string/send"
            android:layout_below="@id/email"
            android:textAppearance="@style/textStyle"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</layout>