<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/list_layout"
    android:elevation="8dp"
    android:orientation="horizontal"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:weightSum="100"
    tools:ignore="UnusedAttribute"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="80">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textview.MaterialTextView
                style="@style/textStylehint2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/title"
                android:text="@string/title"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/normalListTitle"
                style="@style/textStylehint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingLeft="4dp"
                android:text="@string/title"
                android:textColorHint="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textnote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="0dp"
            android:layout_toStartOf="@id/normalListNote"
            android:layout_toLeftOf="@id/normalListNote"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            tools:ignore="NotSibling,RtlSymmetry">

            <com.google.android.material.textview.MaterialTextView
                style="@style/textStylehint2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/normalListNote"
                style="@style/textStylehint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:paddingStart="4dp"
                android:paddingLeft="4dp"
                android:paddingEnd="4dp"
                android:text="@string/note"
                android:textColorHint="@color/textColor" />
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="20">

        <LinearLayout
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textview.MaterialTextView
                style="@style/textStylehint2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/date"
                android:visibility="gone"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/normalListDate"
                style="@style/textStylehint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/date"
                android:textColorHint="@color/textColor"
                android:textSize="10sp" />
        </LinearLayout>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/star"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/date"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_toStartOf="@id/normalListImage"
            android:layout_toLeftOf="@id/normalListImage"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_stars_24" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/normalListImage"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_camera_alt_24" />
    </RelativeLayout>


</LinearLayout>